# rules-rust-bazel-7-build

./: .bazeliskrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  compose.yaml
crates/: BUILD.bazel  BUILD.cc-1.0.83.bazel  BUILD.libc-0.2.151.bazel  BUILD.libffi-3.2.0.bazel  BUILD.libffi-sys-2.3.0.bazel  crates.bzl  defs.bzl
src/: main.rs
